Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/Diagnostics/compressed/T8012003c.out
T8012003c.java:18:15: compiler.err.report.access: m(), private, P
1 error
